--- a/client/src/App.css
+++ b/client/src/App.css
@@ -22,11 +22,15 @@ footer{
 }
 h1, h2, h3 {
   text-align: center;
-  color: darkcyan;
+  color: #4FC3F7;
 }
 
 h4, h5, h6 {
   text-align: center;
+}
+
+html, body {
+  background-color: beige;
 }
 .dark-overlay {
   background-color: rgba(0, 0, 0, 0.7);
@@ -39,7 +43,6 @@ h4, h5, h6 {
 
 .card-form {
   opacity: 0.9;
-
 }
 
 .latest-profiles-img {
@@ -48,5 +51,5 @@ h4, h5, h6 {
 }
 
 .form-control::placeholder {
-  color: lightblue !important;
+  color:  #4FC3F7!important;
 }
